--- a/templates/currentjoblist.html
+++ b/templates/currentjoblist.html
@@ -10,6 +10,13 @@
         <th>Customer ID</th>
         <th>Customer Name</th>
         <th>Date</th>
+        <th>Job Service</th>
+        <th>Service qty</th>
+        <th>Service price</th>
+        <th>Job Part</th>
+        <th>Part qty</th>
+        <th>Part price</th>
+        <th>Total price</th>
     </tr>
     {% for job in job_list %}
         <tr>
