--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <li><a href="{{ url_for('home') }}">Current Jobs</a></li>
             </ul>
           </nav>
-          <section class="content">
+          <!-- <section class="content">
             <header>
               {% block header %}{% endblock %}
             </header>
@@ -22,7 +22,7 @@
               <div class="flash">{{ message }}</div>
             {% endfor %}
             {% block content %}{% endblock %}
-          </section>
+          </section> -->
 
         <!-- Bootstrap's JavaScript bundle including Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
