--- a/templates/currentjoblist.html
+++ b/templates/currentjoblist.html
@@ -1,30 +1,40 @@
 {% extends "base.html" %}
-{% block content %}
+
+{% block title %}{{currentjobs}}{% endblock %}
 
 <h2>Curent Job List</h2>
 
 <!-- code to display list of jobs-->
-<table>
-    <tr>
-        <th>Job ID</th>
-        <th>Customer ID</th>
-        <th>Customer Name</th>
-        <th>Date</th>
-        <th>Job Service</th>
-        <th>Service qty</th>
-        <th>Service price</th>
-        <th>Job Part</th>
-        <th>Part qty</th>
-        <th>Part price</th>
-        <th>Total price</th>
-    </tr>
-    {% for job in job_list %}
+
+<table class="table">
+    <caption>Current Jobs</caption>
+    <thead>
         <tr>
-            {% for field in job %}
-                <td>{{field}}</td>
-            {% endfor %}
+            <th>Job ID</th>
+            <th>Customer ID</th>
+            <th>Customer Name</th>
+            <th>Date</th>
+            <th>Job Service</th>
+            <th>Service qty</th>
+            <th>Service price</th>
+            <th>Job Part</th>
+            <th>Part qty</th>
+            <th>Part price</th>
+            <th>Total price</th>
         </tr>
-    {% endfor %}
+    </thead>
+    <tbody>
+        
+    </tbody>
 </table>
 
-{% endblock %}
+<!--{% for job in job_list %}
+    <tr>
+        {% for field in job %}
+        <td>{{field}}</td>
+        {% endfor %}
+    </tr>
+    {% endfor %}
+</table> -->
+
+<!-- {% endblock %} -->
