--- a/templates/addjobs.html
+++ b/templates/addjobs.html
@@ -5,18 +5,18 @@
 {% block content %}
 
 <h3>Add Jobs</h2>
-<button type="button" class="btn btn-primary btn-sm" onclick="add()">Add</button>
+<button type="button" class="btn btn-primary btn-sm" id="grid">Add</button>
 <button type="button" class="btn btn-success btn-sm">Mark as completed</button>
-<table class="table" table-bordered>
+<table class="table" table-bordered id="grid">
     <thead>
         <tr>
             <th>Job ID</th>
             <th>Customer ID</th>
             <th>Date</th>
-            <th>job service</th>
+            <th>Job service</th>
             <th>qty</th>
             <th>price</th>
-            <th>job part</th>
+            <th>Job part</th>
             <th>qty</th>
             <th>price</th>              		
         </tr>
@@ -24,36 +24,67 @@
     <tbody>
         {% for job in job_detail_list %}
         <tr>
-            {% for field in job%}
+            {% for field in job %}
             <th>{{field}}</th>
-            {% endfor %}           
+            {% endfor %}            
         </tr>
         {% endfor %}
-
+       
     </tbody>
-</table>    
+</table> 
 
-<script>
-    // $(document).ready(function() {
-    //     // 当点击“添加行”按钮时，执行以下代码
-    //     $("#add").click(function() {
-    //         // 创建一个新的行
-    //         var newRow = $("<tr></tr>");
-    //         // 添加行中的列
-    //         newRow.append("<td>新商品</td>");
-    //         newRow.append("<td>300</td>");
-    //         // 将新行添加到表格中的最后一行
-    //         $(".table tbody").append(newRow);
-    //     });
-    // });
-    var obj=$('#add');
-    //插入数据到第一行
-    obj.bootstrapTable('insertRow', {
-            index: 2,
-            row: {
-            Id: 100,
-            catalog: 'new car' 
-            }
-    });
-</script>
+<div class="container">
+    <form class="form-horizontal" style="margin-top: 40px;" method="POST">
+        <div class="row clearfix">
+            <div class="col-xs-6">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Service</label>                   
+                    <div class="col-sm-10">
+                        <select class="form-control">
+                            <option>IT部门</option>
+                            <option>销售部门</option>
+                            <option>运营部</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">qty</label>
+                    <div class="col-sm-10">
+                    <input type="text" class="form-control" placeholder="Service qty">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row clearfix">
+            <div class="col-xs-6">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Part</label>                   
+                    <div class="col-sm-10">
+                        <select class="form-control">
+                            <option>IT部门</option>
+                            <option>销售部门</option>
+                            <option>运营部</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">qty</label>
+                    <div class="col-sm-10">
+                    <input type="text" class="form-control" placeholder="Part qty">
+                    </div>
+                </div>
+            </div>
+        </div>
+       
+        <div class="form-group" style="text-align: center; padding: 20px;">
+            <button class="btn btn-primary">Submit</button>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
