--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="list-group" style="margin-top: 40px;"> 
-    <a class="list-group-item active"> To do list</a> 
+    <a class="list-group-item active"> Operation</a> 
     <a href="{{ url_for('customerlist')}}" class="list-group-item">Customer list</a> 
     <a href="{{ url_for('addcustomer')}}" class="list-group-item">Add customer</a> 
     <a href="{{ url_for('addservice')}}"class="list-group-item">Add Service</a> 
