--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -4,30 +4,53 @@
 
 {% block content %}
 <h3>Customer List</h2>
-    <!--Customer search-->
-    <form class="navbar-form navbar-right">
-        <div class="form-group"><input class="form-control" placeholder="first name or surname"> </div> 
-        <button type="submit"class="btn btn-primary">Submit</button>
-    </form>
-    <!-- code to display list of customers-->
-    <table class="table" table-bordered>
-        <thead>
-            <tr>
-                <th>Customer ID</th>
-                <th>First name</th>
-                <th>Family Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for customer in customer_list %}
-            <tr>
-                {% for field in customer %}
-                <th>{{field}}</th>
-                {% endfor %}
-            </tr>
+<!--Customer search-->
+<form class="navbar-form navbar-right" method="post" action="{{ url_for('customerlist')}}">
+    <input class="form-control mr-sm-2" type="search" placeholder="first name or surname" aria-label="Search" name="search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="btn-primary">Search</button>
+</form>
+
+<!-- code to display list of customers-->
+<table class="table" table-bordered>
+    <thead>
+        <tr>
+            <th>Customer ID</th>
+            <th>First name</th>
+            <th>Family Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for customer in customer_list %}
+        <tr>
+            {% for field in customer %}
+            <th>{{field}}</th>
             {% endfor %}
-        </tbody>
-    </table>
-    {% endblock %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<!-- code to display list of search customers-->
+<table class="table" table-bordered>
+    <thead>
+        <tr>
+            <th>Customer ID</th>
+            <th>First name</th>
+            <th>Family Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for customer search_customer %}
+        <tr>
+            {% for field in customer %}
+            <th>{{field}}</th>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% endblock %}
