--- a/templates/addjobs.html
+++ b/templates/addjobs.html
@@ -5,86 +5,89 @@
 {% block content %}
 
 <h3>Add Jobs</h2>
-<button type="button" class="btn btn-primary btn-sm" id="grid">Add</button>
-<button type="button" class="btn btn-success btn-sm">Mark as completed</button>
-<table class="table" table-bordered id="grid">
-    <thead>
-        <tr>
-            <th>Job ID</th>
-            <th>Customer ID</th>
-            <th>Date</th>
-            <th>Job service</th>
-            <th>qty</th>
-            <th>price</th>
-            <th>Job part</th>
-            <th>qty</th>
-            <th>price</th>              		
-        </tr>
-    </thead>
-    <tbody>
-        {% for job in job_detail_list %}
-        <tr>
-            {% for field in job %}
-            <th>{{field}}</th>
-            {% endfor %}            
-        </tr>
-        {% endfor %}
-       
-    </tbody>
-</table> 
+    <button type="button" class="btn btn-success btn-sm">Mark as completed</button>
+    <table class="table" table-bordered id="grid">
+        <thead>
+            <tr>
+                <th>Job ID</th>
+                <th>Customer ID</th>
+                <th>Date</th>
+                <th>Job service</th>
+                <th>qty</th>
+                <th>price</th>
+                <th>Job part</th>
+                <th>qty</th>
+                <th>price</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for job in job_detail_list %}
+            <tr>
+                {% for field in job %}
+                <th>{{field}}</th>
+                {% endfor %}
+            </tr>
+            {% endfor %}
 
-<div class="container">
-    <form class="form-horizontal" style="margin-top: 40px;" method="POST">
-        <div class="row clearfix">
-            <div class="col-xs-6">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Service</label>                   
-                    <div class="col-sm-10">
-                        <select class="form-control">
-                            <option>IT部门</option>
-                            <option>销售部门</option>
-                            <option>运营部</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-6">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">qty</label>
-                    <div class="col-sm-10">
-                    <input type="text" class="form-control" placeholder="Service qty">
-                    </div>
-                </div>
-            </div>
-        </div>
+        </tbody>
+    </table>
 
-        <div class="row clearfix">
-            <div class="col-xs-6">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Part</label>                   
-                    <div class="col-sm-10">
-                        <select class="form-control">
-                            <option>IT部门</option>
-                            <option>销售部门</option>
-                            <option>运营部</option>
-                        </select>
+    <div class="container">
+        <form class="form-horizontal" style="margin-top: 40px;" method="POST">
+            <div class="row clearfix">
+                <div class="col-xs-6">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Service</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" selected name="service_name">
+                                <option>Open this select menu</option>
+                                {% for field in service_list %}
+                                    <option>{{field[1]}}</option> 
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">qty</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Service qty" name="service_qty">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6">
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">qty</label>
-                    <div class="col-sm-10">
-                    <input type="text" class="form-control" placeholder="Part qty">
-                    </div>
-                </div>
-            </div>
-        </div>
-       
-        <div class="form-group" style="text-align: center; padding: 20px;">
-            <button class="btn btn-primary">Submit</button>
-        </div>
-    </form>
-</div>
 
-{% endblock %}
+            <div class="row clearfix">
+                <div class="col-xs-6">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Part</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="part_name">
+                                <option selected>Open this select menu</option>
+                                {% for field in part_list %}
+                                    <option>{{field[1]}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">qty</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Part qty" name="part_qty">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="checkbox" style="text-align: center"> 
+                <label> <input type="checkbox" id="checkboxSuccess" value="option1"> Confirm to add</label> 
+            </div>
+            <div class="form-group" style="text-align: center; padding: 20px;">
+                <button class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+
+    {% endblock %}
