--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -4,31 +4,52 @@
 
 {% block content %}
 <h3>Customer List</h2>
-<!--Customer search-->
-<form class="navbar-form navbar-right" method="post" action="{{ url_for('customerlist')}}">
-    <input class="form-control mr-sm-2" type="search" placeholder="first name or surname" aria-label="Search" name="search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="btn-primary">Search</button>
-</form>
+    <!--Customer search-->
+    <form class="navbar-form navbar-right" method="post" action="{{ url_for('customerlist')}}">
+        <input class="form-control mr-sm-2" type="search" placeholder="first name or surname" aria-label="Search"
+            name="search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="btn-primary">Search</button>
+        <div class="form-group" style="text-align: center; padding: 20px;">
+            <button class="btn btn-primary">Back to Customer List</button>
+        </div>
+    </form>
 
-<!-- code to display list of customers-->
-<table class="table" table-bordered>
-    <thead>
-        <tr>
-            <th>Customer ID</th>
-            <th>First name</th>
-            <th>Family Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for customer in customer_list %}
-        <tr>
-            {% for field in customer %}
-            <th>{{field}}</th>
+    <!-- code to display list of customers-->
+    {% if customer_list == [] %}
+    <table class="table" table-bordered>
+        <thead>
+            <tr>
+                <th>Customer ID</th>
+                <th>First name</th>
+                <th>Family Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+            </tr>
+        </thead>
+    </table>
+    <div class="alert alert-danger" role="alert"> <strong>Oh snap!</strong> Not found</div>
+   
+    {% else %}
+    <table class="table" table-bordered>
+        <thead>
+            <tr>
+                <th>Customer ID</th>
+                <th>First name</th>
+                <th>Family Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for customer in customer_list %}
+            <tr>
+                {% for field in customer %}
+                <th>{{field}}</th>
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-{% endblock %}
+        </tbody>
+    </table>
+    {% endif %}
+    
+    {% endblock %}
