--- a/templates/addjobs.html
+++ b/templates/addjobs.html
@@ -6,6 +6,7 @@
 
 <h3>Add Jobs</h2>
     <button type="button" class="btn btn-success btn-sm">Mark as completed</button>
+<!--show add job object-->
     <table class="table" table-bordered id="grid">
         <thead>
             <tr>
@@ -32,6 +33,7 @@
         </tbody>
     </table>
 
+<!--add submit-->
     <div class="container">
         <form class="form-horizontal" style="margin-top: 40px;" method="POST">
             <div class="row clearfix">
