--- a/templates/add_part.html
+++ b/templates/add_part.html
@@ -7,11 +7,11 @@
 <div class="container">
         <form class="form-horizontal" style="margin-top: 40px;" method="POST">
             <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Part name</label>
-                <div class="col-sm-10"> <input type="password" class="form-control" id="inputPassword3" placeholder="Part name">
+                <div class="col-sm-10"> <input type="text" class="form-control" name="partname" placeholder="Part name">
                 </div>
             </div>
             <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Part cost</label>
-                <div class="col-sm-10"> <input type="password" class="form-control" id="inputPassword3" placeholder="Part cost">
+                <div class="col-sm-10"> <input type="text" class="form-control" name="partcost" placeholder="Part cost">
                 </div>
             </div>
             <div class="form-group">
@@ -19,4 +19,5 @@
             </div>
         </form>
 </div>
+
 {% endblock %}
