--- a/templates/addjobs.html
+++ b/templates/addjobs.html
@@ -83,11 +83,33 @@
                     </div>
                 </div>
             </div>
-            <div class="checkbox" style="text-align: center"> 
-                <label> <input type="checkbox" id="checkboxSuccess" value="option1"> Confirm to add</label> 
-            </div>
+            <!-- <div class="form-group" style="text-align: center; padding: 20px;">
+                <button class="btn btn-primary"></button>
+            </div> -->
+            
+            <!-- Button trigger modal -->
             <div class="form-group" style="text-align: center; padding: 20px;">
-                <button class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
+            </div> 
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Job</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+                    Do you want to add the data to database?
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary"data-dismiss="modal">Save changes</button>
+                    </div>
+                </div>
+                </div>
             </div>
         </form>
     </div>
