add service/job ok

--- a/templates/addjobs.html
+++ b/templates/addjobs.html
@@ -35,7 +35,7 @@
 
 <!--add submit-->
     <div class="container">
-        <form class="form-horizontal" style="margin-top: 40px;" method="POST">
+        <form class="form-horizontal" style="margin-top: 40px;" method="post">
             <div class="row clearfix">
                 <div class="col-xs-6">
                     <div class="form-group">
