--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -5,26 +5,46 @@
 {% block content %}
 <h3>Add customer</h3>
 <div class="container">
-    <div class="visually-hidden">
-        <form class="form-horizontal row g-3 needs-validation" style="margin-top: 40px;" method="POST" novalidate>
-            <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Family name (*)</label>
-                <div class="col-sm-10"> <input type="text" class="form-control" id="inputPassword3" placeholder="Family name" required>
+    <form class="form-horizontal row g-3 needs-validation" style="margin-top: 40px;" action="/addcustomer" method="POST" id="myForm">
+        <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Family name (*)</label>
+            <div class="col-sm-10"> <input type="text" class="form-control" name="familyname"placeholder="Family name" required>
+            </div>
+        </div>
+        <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">First name</label>
+            <div class="col-sm-10"> <input type="text" class="form-control" name="firstyname" placeholder="First name">
+            </div>
+        </div>
+        <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Email (*)</label>
+            <div class="col-sm-10"> <input type="email" class="form-control" name="email" placeholder="Email" required> </div>
+        </div>
+        <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Phone (*)</label>
+            <div class="col-sm-10"> <input type="text" class="form-control" name="phone" placeholder="Phone" required> </div>
+        </div>
+        <!-- Button trigger modal -->
+        <div class="form-group" style="text-align: center; padding: 20px;"> 
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
+        </div> 
+    </form>
+
+     <!-- Modal -->
+     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Customer</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Do you want to add customer to the database?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="myForm">Save changes</button>
                 </div>
             </div>
-            <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">First name</label>
-                <div class="col-sm-10"> <input type="text" class="form-control" id="inputPassword3" placeholder="First name">
-                </div>
-            </div>
-            <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Email (*)</label>
-                <div class="col-sm-10"> <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required> </div>
-            </div>
-            <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Phone (*)</label>
-                <div class="col-sm-10"> <input type="text" class="form-control" id="inputEmail3" placeholder="Phone" required> </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10"> <button type="submit" class="btn btn-primary" name="submit">Submit</button> </div>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 {% endblock %}
