--- a/templates/add_service.html
+++ b/templates/add_service.html
@@ -5,18 +5,44 @@
 {% block content %}
 <h3>Add service</h3>
 <div class="container">
-        <form class="form-horizontal" style="margin-top: 40px;" method="POST">
-            <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Service name</label>
-                <div class="col-sm-10"> <input type="password" class="form-control" id="inputPassword3" placeholder="Service name">
+    <form class="form-horizontal" style="margin-top: 40px;" action="/addservice" method="POST" id="myForm">
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Service name</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="servicename" placeholder="Service name">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Part cost</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="servicecost" placeholder="Please write in the format with two decimal places. Range: 0.01~999.99">
+            </div>
+        </div>
+
+        <!-- Button trigger modal -->
+        <div class="form-group" style="text-align: center; padding: 20px;"> 
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
+        </div> 
+    </form>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add Service</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Do you want to add service to the database?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="myForm">Save changes</button>
                 </div>
             </div>
-            <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Service cost</label>
-                <div class="col-sm-10"> <input type="password" class="form-control" id="inputPassword3" placeholder="Service cost">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10"> <button type="submit" class="btn btn-primary">Submit</button> </div>
-            </div>
-        </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
