--- a/templates/base.html
+++ b/templates/base.html
@@ -28,11 +28,12 @@
     <header>
       {% block header %}{% endblock %}
     </header>
-
-    {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
+    {% for message in get_flashed_messages(with_categories=True) %}
+    <div class="alert alert-{{ message[0] }}">
+        <button type="button" class="close" data-dismiss="info">&times;</button>
+        {{ message[1] }}
+    </div>
     {% endfor %}
-
     {% block content %}{% endblock %}
   </section>
 
