--- a/templates/schedule_job.html
+++ b/templates/schedule_job.html
@@ -6,30 +6,52 @@
 
 <h3>Schedule Job</h3>
 <div class="container">
-    <form class="form-horizontal" style="margin-top: 40px;" method="POST">  
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Customer ID</label>                   
-            <div class="col-sm-10">
-                <select class="form-control">
-                    <option>xxx</option>
-                    <option>xxx</option>
-                    <option>xxx</option>
-                </select>
-            </div>
+    <form class="form-horizontal" style="margin-top: 40px;" method="POST" action="/schedule" id="myForm">  
+        <!--get customer info-->
+        <div class="form-group">                                                     
+                <label for="exampleDataList" class="col-sm-2 control-label">Customer</label>   
+                <div class="col-sm-10">           
+                <input class="form-control" list="datalistOptions" id="exampleDataList" name="customerid" placeholder="Type to search..." autocomplete="off"> 
+                    <datalist id="datalistOptions">
+                    {% for idname in idname_list%}
+                        <option value={{idname[0]}}>
+                    {% endfor %}
+                </div> 
+                </datalist>                                   
         </div>
-
+        <!--get the date-->
         <div class="form-group">
             <label class="col-sm-2 control-label">Date</label>
             <div class="col-sm-10">
-                <input type="text" id="dt" class="form-control" placeholder="The date must be today or in the future">
+                <input type="text" id="dt" class="form-control" placeholder="The date must be today or in the future" name="date" autocomplete="off"  readonly>
             </div>
         </div>
         
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10"> <button type="submit" class="btn btn-primary">Submit</button> </div>
-        </div>
+        <!-- Button trigger modal -->
+        <div class="form-group" style="text-align: center; padding: 20px;"> 
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
+        </div> 
     </form>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Schedule Job</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Do you want to schedule the new job?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary" form="myForm">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
 
 {% endblock %}
