--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -3,48 +3,67 @@
 {% block title %}{{addcustomer}}{% endblock %}
 
 {% block content %}
-<h3>Add customer</h3>
-<div class="container">
-    <form class="form-horizontal row g-3 needs-validation" style="margin-top: 40px;" action="/addcustomer" method="POST" id="myForm">
-        <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Family name (*)</label>
-            <div class="col-sm-10"> <input type="text" class="form-control" name="familyname"placeholder="Family name" required>
-            </div>
-        </div>
-        <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">First name</label>
-            <div class="col-sm-10"> <input type="text" class="form-control" name="firstyname" placeholder="First name">
-            </div>
-        </div>
-        <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Email (*)</label>
-            <div class="col-sm-10"> <input type="email" class="form-control" name="email" placeholder="Email" required> </div>
-        </div>
-        <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Phone (*)</label>
-            <div class="col-sm-10"> <input type="tel" pattern=".{11}" class="form-control" name="phone" placeholder="The phone number should not exceed 11 digits." required> </div>
-        </div>
-        <!-- Button trigger modal -->
-        <div class="form-group" style="text-align: center; padding: 20px;"> 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
-        </div> 
-    </form>
+<div class="row">
+<!--left list-->
+<div class="col-2">
+    <div class="list-group" style="margin-top: 40px;"> 
+        <a class="list-group-item active"> Admin</a> 
+        <a href="{{ url_for('customerlist')}}" class="list-group-item">Customer List</a> 
+        <a href="{{ url_for('customersearch')}}" class="list-group-item">Customer Search</a> 
+        <a href="{{ url_for('addcustomer')}}" class="list-group-item">Add Customer</a> 
+        <a href="{{ url_for('addservice')}}"class="list-group-item">Add Service</a> 
+        <a href="{{ url_for('addpart')}}" class="list-group-item">Add Part</a> 
+        <a href="{{ url_for('schedule')}}" class="list-group-item">Schedule Job</a> 
+        <a href="{{ url_for('unpaidbills')}}" class="list-group-item">Unpaid Bills & Pay Bills</a> 
+        <a href="{{ url_for('historybills')}}" class="list-group-item">Billing History & Overdue Bills</a> 
+    </div>
+</div>
 
-     <!-- Modal -->
-     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+<!--right content-->
+<div class="col-10">   
+    <h3 style="margin-top: 20px;">Add customer</h3>
+    <div class="container">
+        <form class="form-horizontal row g-3 needs-validation" style="margin-top: 10px;" action="/addcustomer" method="POST" id="myForm">
+            <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">Family name (*)</label>
+                <div class="col-sm-10"> 
+                    <input type="text" class="form-control" id="validationDefault03" name="familyname"placeholder="Family name" required>
+                </div>
+            </div>
+            <div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label">First name</label>
+                <div class="col-sm-10"> <input type="text" class="form-control" name="firstyname" placeholder="First name">
+                </div>
+            </div>
+            <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Email (*)</label>
+                <div class="col-sm-10"> <input type="email" class="form-control" name="email" placeholder="Email" required> </div>
+            </div>
+            <div class="form-group"> <label for="inputEmail3" class="col-sm-2 control-label">Phone (*)</label>
+                <div class="col-sm-10"> <input type="tel" maxlength="11" class="form-control" name="phone" placeholder="The phone number should not exceed 11 digits." required> </div>
+            </div>
+            <!-- Button trigger modal -->
+            <div class="form-group" style="text-align: center; padding: 20px;"> 
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit</button>
+            </div> 
+        </form>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add Customer</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Add Customer</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Do you want to add customer to the database?
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="submit" class="btn btn-primary" form="myForm">Save changes</button>
                 </div>
             </div>
+            </div>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
