--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="list-group" style="margin-top: 40px;"> 
-    <a class="list-group-item active"> Operation</a> 
+    <a class="list-group-item active"> Admin</a> 
     <a href="{{ url_for('customerlist')}}" class="list-group-item">Customer List</a> 
     <a href="{{ url_for('customersearch')}}" class="list-group-item">Customer Search</a> 
     <a href="{{ url_for('addcustomer')}}" class="list-group-item">Add Customer</a> 
