--- a/templates/billing_history.html
+++ b/templates/billing_history.html
@@ -3,36 +3,52 @@
 {% block title %}{{historybills}}{% endblock %}
 
 {% block content %}
+<div class="row">
+<!--left list-->
+    <div class="col-2">
+        <div class="list-group" style="margin-top: 40px;"> 
+            <a class="list-group-item active"> Admin</a> 
+            <a href="{{ url_for('customerlist')}}" class="list-group-item">Customer List</a> 
+            <a href="{{ url_for('customersearch')}}" class="list-group-item">Customer Search</a> 
+            <a href="{{ url_for('addcustomer')}}" class="list-group-item">Add Customer</a> 
+            <a href="{{ url_for('addservice')}}"class="list-group-item">Add Service</a> 
+            <a href="{{ url_for('addpart')}}" class="list-group-item">Add Part</a> 
+            <a href="{{ url_for('schedule')}}" class="list-group-item">Schedule Job</a> 
+            <a href="{{ url_for('unpaidbills')}}" class="list-group-item">Unpaid Bills & Pay Bills</a> 
+            <a href="{{ url_for('historybills')}}" class="list-group-item">Billing History & Overdue Bills</a> 
+        </div>
+    </div>
+<!--right content-->
+<div class="col-10"> 
+    <h3>Billing History & Overdue Bills</h3>
+    <!-- code to display list of jobs-->
+    <table class="table" table-bordered>
+        <thead>
+            <tr>
+                <th>Customer ID</th>
+                <th>First Name</th>
+                <th>Family Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Job ID</th>
+                <th>Job Date</th>
+                <th visible:False>Customer</th>
+                <th>Total Cost</th>
+                <th>Completed</th>
+                <th>Paid</th>
 
-<h3>Billing History & Overdue Bills</h3>
-
-<!-- code to display list of jobs-->
-<table class="table" table-bordered>
-    <thead>
-        <tr>
-            <th>Customer ID</th>
-            <th>First Name</th>
-            <th>Family Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>Job ID</th>
-            <th>Job Date</th>
-            <th visible:False>Customer</th>
-            <th>Total Cost</th>
-            <th>Completed</th>
-            <th>Paid</th>
-
-        </tr>
-    </thead>
-    <tbody>
-        {% for bills in historybills %}
-        <tr>
-            {% for field in bills %}
-            <td>{{field}}</td>
-            {% endfor %}           
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-
+            </tr>
+        </thead>
+        <tbody>
+            {% for bills in historybills %}
+            <tr>
+                {% for field in bills %}
+                <td>{{field}}</td>
+                {% endfor %}           
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+</div>
 {% endblock %}
