--- a/templates/schedule_job.html
+++ b/templates/schedule_job.html
@@ -3,55 +3,71 @@
 {% block title %}{{schedule}}{% endblock %}
 
 {% block content %}
-
-<h3>Schedule Job</h3>
-<div class="container">
-    <form class="form-horizontal" style="margin-top: 40px;" method="POST" action="/schedule" id="myForm">  
-        <!--get customer info-->
-        <div class="form-group">                                                     
-                <label for="exampleDataList" class="col-sm-2 control-label">Customer</label>   
-                <div class="col-sm-10">           
-                <input class="form-control" list="datalistOptions" id="exampleDataList" name="customerid" placeholder="Type to search..." autocomplete="off"> 
-                    <datalist id="datalistOptions">
-                    {% for idname in idname_list%}
-                        <option value={{idname[0]}}>
-                    {% endfor %}
-                </div> 
-                </datalist>                                   
+<div class="row">
+<!--left list-->
+    <div class="col-2">
+        <div class="list-group" style="margin-top: 40px;"> 
+            <a class="list-group-item active"> Admin</a> 
+            <a href="{{ url_for('customerlist')}}" class="list-group-item">Customer List</a> 
+            <a href="{{ url_for('customersearch')}}" class="list-group-item">Customer Search</a> 
+            <a href="{{ url_for('addcustomer')}}" class="list-group-item">Add Customer</a> 
+            <a href="{{ url_for('addservice')}}"class="list-group-item">Add Service</a> 
+            <a href="{{ url_for('addpart')}}" class="list-group-item">Add Part</a> 
+            <a href="{{ url_for('schedule')}}" class="list-group-item">Schedule Job</a> 
+            <a href="{{ url_for('unpaidbills')}}" class="list-group-item">Unpaid Bills & Pay Bills</a> 
+            <a href="{{ url_for('historybills')}}" class="list-group-item">Billing History & Overdue Bills</a> 
         </div>
-        <!--get the date-->
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Date</label>
-            <div class="col-sm-10">
-                <input type="text" id="dt" class="form-control" placeholder="The date must be today or in the future" name="date" autocomplete="off"  readonly>
+    </div>
+<!--right content-->
+    <div class="col-10"> 
+    <h3>Schedule Job</h3>
+    <div class="container">
+        <form class="form-horizontal" style="margin-top: 40px;" method="POST" action="/schedule" id="myForm">  
+            <!--get customer info-->
+            <div class="form-group">                                                     
+                    <label for="exampleDataList" class="col-sm-2 control-label">Customer</label>   
+                    <div class="col-sm-10">           
+                    <input class="form-control" list="datalistOptions" id="exampleDataList" name="customerid" placeholder="Type to search..." autocomplete="off"> 
+                        <datalist id="datalistOptions">
+                        {% for idname in idname_list%}
+                            <option value={{idname[0]}}>
+                        {% endfor %}
+                    </div> 
+                    </datalist>                                   
             </div>
-        </div>
-        
-        <!-- Button trigger modal -->
-        <div class="form-group" style="text-align: center; padding: 20px;"> 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
-        </div> 
-    </form>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+            <!--get the date-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Date</label>
+                <div class="col-sm-10">
+                    <input type="text" id="dt" class="form-control" placeholder="The date must be today or in the future" name="date" autocomplete="off"  readonly>
+                </div>
+            </div>
+            
+            <!-- Button trigger modal -->
+            <div class="form-group" style="text-align: center; padding: 20px;"> 
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Submit</button>
+            </div> 
+        </form>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Schedule Job</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Schedule Job</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Do you want to schedule the new job?
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="submit" class="btn btn-primary" form="myForm">Save changes</button>
                 </div>
+            </div>
             </div>
         </div>
     </div>
 </div>
-
+</div> 
 {% endblock %}
